fixed footer gap

--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -219,7 +219,7 @@
 .home__footer {
   background-color: $color-merlin;
   color: $color-gallery;
-  margin-bottom: -1rem;
+  margin-bottom: -6rem;
   padding: 10rem 0;
 
   &__wrapper {
